# sonic-refine-suite

./: .env  .env.production  .env.temp  .gitignore  .vsconfig  ACCESO_ADMIN_REMOTO.md  ADMIN_ACCESS_GUIDE.md  AGREGAR_CLAVE_SSH.md  AI_MASTERING_USER_GUIDE.md  BACKEND_CORS_CONFIG.md  BACKEND_FIXES_COMPLETE.md  BACKEND_URL_PARA_LOVABLE.md  BETA_MODE_GUIDE.md  CAMBIOS_COMPLETADOS.md  COLLABORATOR_INSTRUCTIONS.md  COLLABORATOR_SETUP.md  COMPREHENSIVE_ACCESS_GUIDE.md  COMPREHENSIVE_USER_GUIDE.md  CORS_AND_OPTIMIZATION_GUIDE.md  DEPLOY.md  DEPLOYMENT_COMPLETO_FINAL.md  DEPLOY_FROM_ROOT.ps1  ELIMINAR_CREDENCIAL_MANUAL.md  FINAL_SETUP_SUMMARY.md  FRONTEND_LOCAL_SETUP_COMPLETE.md  GCS_CORS_SETUP.md  GCS_PERMISSIONS_CHECK.md  GOOGLE_AUTH_DIAGNOSTIC_STEPS.md  GOOGLE_AUTH_SETUP.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTRUCCIONES_FINALES.md  INSTRUCCIONES_FINALES_SSH.md  INSTRUCCIONES_PUSH_INMEDIATO.md  INSTRUCCIONES_PUSH_LOVABLE.md  KEY_DETECTION_DEBUG.md  LOCAL_BACKEND_TEST_COMPLETE.md  LOVABLE_DEPLOYMENT_PROMPT.md  LOVABLE_ENDPOINT_ADDED.md  (+84 more)
.github/: COLLABORATOR_ACCESS.md
backend/: .dockerignore  Dockerfile  SUPPORTERS.md  app.py  deploy-cloud-run.ps1  deploy.sh  gcp_utils.py  kill_port_8000.ps1  main.py  mypy.ini  requirements.txt  start_backend.ps1  start_with_credentials.ps1  test_backend.py  worker.py
dist-electron/: main.js  preload.js
docs/: FINANCIAL_PROJECTIONS.md  PAYMENT_SETUP.md
electron/: main.ts  preload.ts  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+493 files in other folders)
